Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -487,7 +487,13 @@
       "\tEpoch: 16\tTrain loss: 0.489\tTrain Acc: 83.72455\n",
       "\tEpoch: 16\tTest loss: 1.154\tTest Acc: 69.456875\n",
       "==========================\n",
-      "\tEpoch: 17\tTrain loss: 0.464\tTrain Acc: 84.47375\n"
+      "\tEpoch: 17\tTrain loss: 0.464\tTrain Acc: 84.47375\n",
+      "\tEpoch: 17\tTest loss: 1.059\tTest Acc: 70.776875\n",
+      "==========================\n",
+      "\tEpoch: 18\tTrain loss: 0.435\tTrain Acc: 85.34455\n",
+      "\tEpoch: 18\tTest loss: 1.07\tTest Acc: 71.5325255\n",
+      "==========================\n",
+      "Epoch: 19 i : 24 and loss: 0.46 acc: 0.84375555\r"
      ]
     }
    ],
