Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -467,7 +467,10 @@
       "\tEpoch: 2\tTrain loss: 1.29\tTrain Acc: 52.115125\n",
       "\tEpoch: 2\tTest loss: 1.2\tTest Acc: 56.26875255\n",
       "==========================\n",
-      "Epoch: 3 i : 358 and loss: 1.002 acc: 0.6406255\r"
+      "\tEpoch: 3\tTrain loss: 1.104\tTrain Acc: 59.89655\n",
+      "\tEpoch: 3\tTest loss: 1.029\tTest Acc: 62.625125\n",
+      "==========================\n",
+      "Epoch: 4 i : 13 and loss: 0.931 acc: 0.6796875\r"
      ]
     }
    ],
