Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -493,7 +493,10 @@
       "\tEpoch: 18\tTrain loss: 0.435\tTrain Acc: 85.34455\n",
       "\tEpoch: 18\tTest loss: 1.07\tTest Acc: 71.5325255\n",
       "==========================\n",
-      "Epoch: 19 i : 24 and loss: 0.46 acc: 0.84375555\r"
+      "\tEpoch: 19\tTrain loss: 0.406\tTrain Acc: 86.13225\n",
+      "\tEpoch: 19\tTest loss: 1.146\tTest Acc: 70.519375\n",
+      "==========================\n",
+      "Epoch: 20 i : 96 and loss: 0.356 acc: 0.8593755\r"
      ]
     }
    ],
