Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -470,7 +470,8 @@
       "\tEpoch: 3\tTrain loss: 1.104\tTrain Acc: 59.89655\n",
       "\tEpoch: 3\tTest loss: 1.029\tTest Acc: 62.625125\n",
       "==========================\n",
-      "Epoch: 4 i : 314 and loss: 0.963 acc: 0.6406255\r"
+      "\tEpoch: 4\tTrain loss: 0.967\tTrain Acc: 65.39855\n",
+      "Epoch: 4 i : 44 and loss: 1.072 acc: 0.6484375\r"
      ]
     }
    ],
