--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -471,7 +471,9 @@
       "\tEpoch: 3\tTest loss: 1.029\tTest Acc: 62.625125\n",
       "==========================\n",
       "\tEpoch: 4\tTrain loss: 0.967\tTrain Acc: 65.39855\n",
-      "Epoch: 4 i : 44 and loss: 1.072 acc: 0.6484375\r"
+      "\tEpoch: 4\tTest loss: 0.895\tTest Acc: 67.786255\n",
+      "==========================\n",
+      "Epoch: 5 i : 94 and loss: 0.835 acc: 0.7265625\r"
      ]
     }
    ],
