--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -445,7 +445,9 @@
       "\tEpoch: 0\tTest loss: 1.652\tTest Acc: 37.715255\n",
       "==========================\n",
       "\tEpoch: 1\tTrain loss: 1.467\tTrain Acc: 45.48425\n",
-      "Epoch: 1 i : 64 and loss: 1.186 acc: 0.5703125\r"
+      "\tEpoch: 1\tTest loss: 1.286\tTest Acc: 53.121255\n",
+      "==========================\n",
+      "Epoch: 2 i : 9 and loss: 1.24 acc: 0.52343755\r"
      ]
     }
    ],
