Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -496,7 +496,10 @@
       "\tEpoch: 19\tTrain loss: 0.406\tTrain Acc: 86.13225\n",
       "\tEpoch: 19\tTest loss: 1.146\tTest Acc: 70.519375\n",
       "==========================\n",
-      "Epoch: 20 i : 96 and loss: 0.356 acc: 0.8593755\r"
+      "\tEpoch: 20\tTrain loss: 0.401\tTrain Acc: 86.22855\n",
+      "\tEpoch: 20\tTest loss: 1.289\tTest Acc: 68.563125\n",
+      "==========================\n",
+      "Epoch: 21 i : 213 and loss: 0.439 acc: 0.8515625\r"
      ]
     }
    ],
