--- a/Loss LanScape/.~3. Relu LocalRN.ipynb
+++ b/Loss LanScape/.~3. Relu LocalRN.ipynb
@@ -18,8 +18,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T18:56:31.174791Z",
-     "start_time": "2019-05-03T18:56:26.383117Z"
+     "end_time": "2019-05-03T18:56:17.965301Z",
+     "start_time": "2019-05-03T18:56:13.350323Z"
     },
     "code_folding": []
    },
@@ -69,15 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T18:56:31.218535Z",
-     "start_time": "2019-05-03T18:56:31.177225Z"
+     "end_time": "2019-05-03T18:56:39.002193Z",
+     "start_time": "2019-05-03T18:56:38.952568Z"
     },
     "code_folding": [
-     33,
-     95
+     33
     ]
    },
    "outputs": [],
@@ -180,7 +179,7 @@
     "class AllConvNet_LocalRN(nn.Module):\n",
     "    \n",
     "    def __init__(self, input_size, n_classes=10, **kwargs):\n",
-    "        super(AllConvNet_BN, self).__init__()\n",
+    "        super(AllConvNet_LocalRN, self).__init__()\n",
     "        \n",
     "        self.conv1 = nn.Conv2d(input_size,96, 3, padding=1,bias=False)\n",
     "        self.bn1   = nn.LocalResponseNorm(96)\n",
@@ -243,11 +242,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T18:56:34.707631Z",
-     "start_time": "2019-05-03T18:56:31.239327Z"
+     "end_time": "2019-05-03T18:56:44.222212Z",
+     "start_time": "2019-05-03T18:56:39.505460Z"
     },
     "code_folding": []
    },
@@ -260,31 +259,31 @@
       "        Layer (type)               Output Shape         Param #\n",
       "================================================================\n",
       "            Conv2d-1           [-1, 96, 32, 32]           2,592\n",
-      "       BatchNorm2d-2           [-1, 96, 32, 32]             192\n",
+      " LocalResponseNorm-2           [-1, 96, 32, 32]               0\n",
       "            Conv2d-3           [-1, 96, 32, 32]          82,944\n",
-      "       BatchNorm2d-4           [-1, 96, 32, 32]             192\n",
+      " LocalResponseNorm-4           [-1, 96, 32, 32]               0\n",
       "            Conv2d-5           [-1, 96, 16, 16]          82,944\n",
-      "       BatchNorm2d-6           [-1, 96, 16, 16]             192\n",
+      " LocalResponseNorm-6           [-1, 96, 16, 16]               0\n",
       "            Conv2d-7          [-1, 192, 16, 16]         165,888\n",
-      "       BatchNorm2d-8          [-1, 192, 16, 16]             384\n",
+      " LocalResponseNorm-8          [-1, 192, 16, 16]               0\n",
       "            Conv2d-9          [-1, 192, 16, 16]         331,776\n",
-      "      BatchNorm2d-10          [-1, 192, 16, 16]             384\n",
+      "LocalResponseNorm-10          [-1, 192, 16, 16]               0\n",
       "           Conv2d-11            [-1, 192, 8, 8]         331,776\n",
-      "      BatchNorm2d-12            [-1, 192, 8, 8]             384\n",
+      "LocalResponseNorm-12            [-1, 192, 8, 8]               0\n",
       "           Conv2d-13            [-1, 192, 8, 8]         331,776\n",
-      "      BatchNorm2d-14            [-1, 192, 8, 8]             384\n",
+      "LocalResponseNorm-14            [-1, 192, 8, 8]               0\n",
       "           Conv2d-15            [-1, 192, 8, 8]          36,864\n",
-      "      BatchNorm2d-16            [-1, 192, 8, 8]             384\n",
+      "LocalResponseNorm-16            [-1, 192, 8, 8]               0\n",
       "           Conv2d-17             [-1, 10, 8, 8]           1,920\n",
       "================================================================\n",
-      "Total params: 1,370,976\n",
-      "Trainable params: 1,370,976\n",
+      "Total params: 1,368,480\n",
+      "Trainable params: 1,368,480\n",
       "Non-trainable params: 0\n",
       "----------------------------------------------------------------\n",
       "Input size (MB): 0.01\n",
       "Forward/backward pass size (MB): 5.44\n",
-      "Params size (MB): 5.23\n",
-      "Estimated Total Size (MB): 10.68\n",
+      "Params size (MB): 5.22\n",
+      "Estimated Total Size (MB): 10.67\n",
       "----------------------------------------------------------------\n",
       "Cuda:  True\n"
      ]
@@ -293,7 +292,7 @@
    "source": [
     "# load model with some batch size\n",
     "batch_size = 128 ; learning_rate = 0.0008\n",
-    "net        = AllConvNet_BN(3).cuda()\n",
+    "net        = AllConvNet_LocalRN(3).cuda()\n",
     "\n",
     "# load the loss \n",
     "criterion = nn.CrossEntropyLoss()\n",
@@ -306,11 +305,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T18:56:34.756387Z",
-     "start_time": "2019-05-03T18:56:34.716611Z"
+     "end_time": "2019-05-03T18:56:44.254680Z",
+     "start_time": "2019-05-03T18:56:44.232185Z"
     },
     "code_folding": [
      3
@@ -322,30 +321,14 @@
      "output_type": "stream",
      "text": [
       "1 layer torch.Size([96, 3, 3, 3])\n",
-      "2 layer torch.Size([96])\n",
-      "3 layer torch.Size([96])\n",
-      "4 layer torch.Size([96, 96, 3, 3])\n",
-      "5 layer torch.Size([96])\n",
-      "6 layer torch.Size([96])\n",
-      "7 layer torch.Size([96, 96, 3, 3])\n",
-      "8 layer torch.Size([96])\n",
-      "9 layer torch.Size([96])\n",
-      "10 layer torch.Size([192, 96, 3, 3])\n",
-      "11 layer torch.Size([192])\n",
-      "12 layer torch.Size([192])\n",
-      "13 layer torch.Size([192, 192, 3, 3])\n",
-      "14 layer torch.Size([192])\n",
-      "15 layer torch.Size([192])\n",
-      "16 layer torch.Size([192, 192, 3, 3])\n",
-      "17 layer torch.Size([192])\n",
-      "18 layer torch.Size([192])\n",
-      "19 layer torch.Size([192, 192, 3, 3])\n",
-      "20 layer torch.Size([192])\n",
-      "21 layer torch.Size([192])\n",
-      "22 layer torch.Size([192, 192, 1, 1])\n",
-      "23 layer torch.Size([192])\n",
-      "24 layer torch.Size([192])\n",
-      "25 layer torch.Size([10, 192, 1, 1])\n"
+      "2 layer torch.Size([96, 96, 3, 3])\n",
+      "3 layer torch.Size([96, 96, 3, 3])\n",
+      "4 layer torch.Size([192, 96, 3, 3])\n",
+      "5 layer torch.Size([192, 192, 3, 3])\n",
+      "6 layer torch.Size([192, 192, 3, 3])\n",
+      "7 layer torch.Size([192, 192, 3, 3])\n",
+      "8 layer torch.Size([192, 192, 1, 1])\n",
+      "9 layer torch.Size([10, 192, 1, 1])\n"
      ]
     }
    ],
@@ -385,11 +368,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T18:56:37.963484Z",
-     "start_time": "2019-05-03T18:56:35.820172Z"
+     "end_time": "2019-05-03T18:56:47.357980Z",
+     "start_time": "2019-05-03T18:56:45.018588Z"
     }
    },
    "outputs": [
@@ -445,7 +428,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-03T18:57:13.981Z"
+     "start_time": "2019-05-03T18:57:19.293Z"
     },
     "code_folding": [
      6,
@@ -458,22 +441,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tEpoch: 0\tTrain loss: 2.034\tTrain Acc: 23.17475\n",
-      "\tEpoch: 0\tTest loss: 1.738\tTest Acc: 33.517555\n",
+      "\tEpoch: 0\tTrain loss: 1.977\tTrain Acc: 24.50875\n",
+      "\tEpoch: 0\tTest loss: 1.652\tTest Acc: 37.715255\n",
       "==========================\n",
-      "\tEpoch: 1\tTrain loss: 1.547\tTrain Acc: 41.79875\n",
-      "\tEpoch: 1\tTest loss: 1.389\tTest Acc: 48.575525\n",
+      "\tEpoch: 1\tTrain loss: 1.467\tTrain Acc: 45.48425\n",
+      "\tEpoch: 1\tTest loss: 1.286\tTest Acc: 53.121255\n",
       "==========================\n",
-      "\tEpoch: 2\tTrain loss: 1.29\tTrain Acc: 52.115125\n",
-      "\tEpoch: 2\tTest loss: 1.2\tTest Acc: 56.26875255\n",
-      "==========================\n",
-      "\tEpoch: 3\tTrain loss: 1.104\tTrain Acc: 59.89655\n",
-      "\tEpoch: 3\tTest loss: 1.029\tTest Acc: 62.625125\n",
-      "==========================\n",
-      "\tEpoch: 4\tTrain loss: 0.967\tTrain Acc: 65.39855\n",
-      "\tEpoch: 4\tTest loss: 0.895\tTest Acc: 67.786255\n",
-      "==========================\n",
-      "Epoch: 5 i : 321 and loss: 0.865 acc: 0.6875625\r"
+      "Epoch: 2 i : 34 and loss: 1.107 acc: 0.5937555\r"
      ]
     }
    ],
@@ -536,7 +510,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-03T18:57:14.340Z"
+     "start_time": "2019-05-03T18:57:19.664Z"
     }
    },
    "outputs": [],
@@ -556,10 +530,10 @@
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
-    "np.save('b_acurracy_list_train.npy', np.asarray(acurracy_list_train))\n",
-    "np.save('b_acurracy_list_test.npy', np.asarray(acurracy_list_test))\n",
-    "np.save('b_loss_list_train.npy', np.asarray(loss_list_train))\n",
-    "np.save('b_loss_list_test.npy', np.asarray(loss_list_test))"
+    "np.save('c_acurracy_list_train.npy', np.asarray(acurracy_list_train))\n",
+    "np.save('c_acurracy_list_test.npy', np.asarray(acurracy_list_test))\n",
+    "np.save('c_loss_list_train.npy', np.asarray(loss_list_train))\n",
+    "np.save('c_loss_list_test.npy', np.asarray(loss_list_test))"
    ]
   },
   {
@@ -567,7 +541,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-03T18:57:15.205Z"
+     "start_time": "2019-05-03T18:57:20.514Z"
     },
     "code_folding": [
      1,
@@ -649,7 +623,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-03T18:57:15.512Z"
+     "start_time": "2019-05-03T18:57:21.041Z"
     }
    },
    "outputs": [],
