Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -473,7 +473,8 @@
       "\tEpoch: 4\tTrain loss: 0.967\tTrain Acc: 65.39855\n",
       "\tEpoch: 4\tTest loss: 0.895\tTest Acc: 67.786255\n",
       "==========================\n",
-      "Epoch: 5 i : 321 and loss: 0.865 acc: 0.6875625\r"
+      "\tEpoch: 5\tTrain loss: 0.851\tTrain Acc: 69.78875\n",
+      "Epoch: 5 i : 71 and loss: 0.816 acc: 0.7421875\r"
      ]
     }
    ],
