Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -474,7 +474,9 @@
       "\tEpoch: 4\tTest loss: 0.895\tTest Acc: 67.786255\n",
       "==========================\n",
       "\tEpoch: 5\tTrain loss: 0.851\tTrain Acc: 69.78875\n",
-      "Epoch: 5 i : 71 and loss: 0.816 acc: 0.7421875\r"
+      "\tEpoch: 5\tTest loss: 0.83\tTest Acc: 69.9625125\n",
+      "==========================\n",
+      "Epoch: 6 i : 73 and loss: 0.708 acc: 0.7656255\r"
      ]
     }
    ],
