Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -499,7 +499,10 @@
       "\tEpoch: 20\tTrain loss: 0.401\tTrain Acc: 86.22855\n",
       "\tEpoch: 20\tTest loss: 1.289\tTest Acc: 68.563125\n",
       "==========================\n",
-      "Epoch: 21 i : 213 and loss: 0.439 acc: 0.8515625\r"
+      "\tEpoch: 21\tTrain loss: 0.381\tTrain Acc: 86.83275\n",
+      "\tEpoch: 21\tTest loss: 1.427\tTest Acc: 68.924375\n",
+      "==========================\n",
+      "Epoch: 22 i : 275 and loss: 0.376 acc: 0.8671875\r"
      ]
     }
    ],
