Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -476,7 +476,10 @@
       "\tEpoch: 5\tTrain loss: 0.851\tTrain Acc: 69.78875\n",
       "\tEpoch: 5\tTest loss: 0.83\tTest Acc: 69.9625125\n",
       "==========================\n",
-      "Epoch: 6 i : 376 and loss: 0.815 acc: 0.7109375\r"
+      "\tEpoch: 6\tTrain loss: 0.761\tTrain Acc: 73.25855\n",
+      "\tEpoch: 6\tTest loss: 0.764\tTest Acc: 72.975625\n",
+      "==========================\n",
+      "Epoch: 7 i : 31 and loss: 0.653 acc: 0.7656255\r"
      ]
     }
    ],
