Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -502,7 +502,10 @@
       "\tEpoch: 21\tTrain loss: 0.381\tTrain Acc: 86.83275\n",
       "\tEpoch: 21\tTest loss: 1.427\tTest Acc: 68.924375\n",
       "==========================\n",
-      "Epoch: 22 i : 275 and loss: 0.376 acc: 0.8671875\r"
+      "\tEpoch: 22\tTrain loss: 0.37\tTrain Acc: 87.074255\n",
+      "\tEpoch: 22\tTest loss: 1.328\tTest Acc: 70.115625\n",
+      "==========================\n",
+      "Epoch: 23 i : 348 and loss: 0.398 acc: 0.8671875\r"
      ]
     }
    ],
