--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -447,7 +447,8 @@
       "\tEpoch: 1\tTrain loss: 1.467\tTrain Acc: 45.48425\n",
       "\tEpoch: 1\tTest loss: 1.286\tTest Acc: 53.121255\n",
       "==========================\n",
-      "Epoch: 2 i : 378 and loss: 1.005 acc: 0.7109375\r"
+      "\tEpoch: 2\tTrain loss: 1.165\tTrain Acc: 58.03625\n",
+      "Epoch: 2 i : 18 and loss: 1.113 acc: 0.5859375\r"
      ]
     }
    ],
