--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -479,7 +479,10 @@
       "\tEpoch: 6\tTrain loss: 0.761\tTrain Acc: 73.25855\n",
       "\tEpoch: 6\tTest loss: 0.764\tTest Acc: 72.975625\n",
       "==========================\n",
-      "Epoch: 7 i : 345 and loss: 0.578 acc: 0.7734375\r"
+      "\tEpoch: 7\tTrain loss: 0.684\tTrain Acc: 76.18455\n",
+      "\tEpoch: 7\tTest loss: 0.728\tTest Acc: 74.776255\n",
+      "==========================\n",
+      "Epoch: 8 i : 2 and loss: 0.612 acc: 0.8125875\r"
      ]
     }
    ],
