Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -505,7 +505,13 @@
       "\tEpoch: 22\tTrain loss: 0.37\tTrain Acc: 87.074255\n",
       "\tEpoch: 22\tTest loss: 1.328\tTest Acc: 70.115625\n",
       "==========================\n",
-      "Epoch: 23 i : 348 and loss: 0.398 acc: 0.8671875\r"
+      "\tEpoch: 23\tTrain loss: 0.369\tTrain Acc: 86.95375\n",
+      "\tEpoch: 23\tTest loss: 1.24\tTest Acc: 71.1775555\n",
+      "==========================\n",
+      "\tEpoch: 24\tTrain loss: 0.359\tTrain Acc: 87.23675\n",
+      "\tEpoch: 24\tTest loss: 1.304\tTest Acc: 71.425125\n",
+      "==========================\n",
+      "Epoch: 25 i : 55 and loss: 0.358 acc: 0.8758125\r"
      ]
     }
    ],
