Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -483,7 +483,9 @@
       "\tEpoch: 7\tTest loss: 0.728\tTest Acc: 74.776255\n",
       "==========================\n",
       "\tEpoch: 8\tTrain loss: 0.616\tTrain Acc: 78.60855\n",
-      "Epoch: 8 i : 16 and loss: 0.89 acc: 0.70312525\r"
+      "\tEpoch: 8\tTest loss: 0.716\tTest Acc: 75.545625\n",
+      "==========================\n",
+      "Epoch: 9 i : 60 and loss: 0.614 acc: 0.7812555\r"
      ]
     }
    ],
