Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -511,7 +511,10 @@
       "\tEpoch: 24\tTrain loss: 0.359\tTrain Acc: 87.23675\n",
       "\tEpoch: 24\tTest loss: 1.304\tTest Acc: 71.425125\n",
       "==========================\n",
-      "Epoch: 25 i : 55 and loss: 0.358 acc: 0.8758125\r"
+      "\tEpoch: 25\tTrain loss: 0.339\tTrain Acc: 87.83275\n",
+      "\tEpoch: 25\tTest loss: 1.189\tTest Acc: 70.116875\n",
+      "==========================\n",
+      "Epoch: 26 i : 116 and loss: 0.483 acc: 0.8125255\r"
      ]
     }
    ],
