Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -514,7 +514,10 @@
       "\tEpoch: 25\tTrain loss: 0.339\tTrain Acc: 87.83275\n",
       "\tEpoch: 25\tTest loss: 1.189\tTest Acc: 70.116875\n",
       "==========================\n",
-      "Epoch: 26 i : 116 and loss: 0.483 acc: 0.8125255\r"
+      "\tEpoch: 26\tTrain loss: 0.344\tTrain Acc: 87.53855\n",
+      "\tEpoch: 26\tTest loss: 1.255\tTest Acc: 69.395525\n",
+      "==========================\n",
+      "Epoch: 27 i : 186 and loss: 0.403 acc: 0.8753125\r"
      ]
     }
    ],
