--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -485,7 +485,10 @@
       "\tEpoch: 8\tTrain loss: 0.616\tTrain Acc: 78.60855\n",
       "\tEpoch: 8\tTest loss: 0.716\tTest Acc: 75.545625\n",
       "==========================\n",
-      "Epoch: 9 i : 363 and loss: 0.613 acc: 0.8125755\r"
+      "\tEpoch: 9\tTrain loss: 0.558\tTrain Acc: 80.60875\n",
+      "\tEpoch: 9\tTest loss: 0.694\tTest Acc: 76.225525\n",
+      "==========================\n",
+      "Epoch: 10 i : 16 and loss: 0.588 acc: 0.7578125\r"
      ]
     }
    ],
