--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -450,7 +450,8 @@
       "\tEpoch: 2\tTrain loss: 1.165\tTrain Acc: 58.03625\n",
       "\tEpoch: 2\tTest loss: 1.068\tTest Acc: 62.617555\n",
       "==========================\n",
-      "Epoch: 3 i : 382 and loss: 0.839 acc: 0.7187575\r"
+      "\tEpoch: 3\tTrain loss: 0.975\tTrain Acc: 65.63675\n",
+      "Epoch: 3 i : 27 and loss: 1.058 acc: 0.6718755\r"
      ]
     }
    ],
