--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -451,7 +451,8 @@
       "\tEpoch: 2\tTest loss: 1.068\tTest Acc: 62.617555\n",
       "==========================\n",
       "\tEpoch: 3\tTrain loss: 0.975\tTrain Acc: 65.63675\n",
-      "Epoch: 3 i : 27 and loss: 1.058 acc: 0.6718755\r"
+      "\tEpoch: 3\tTest loss: 0.996\tTest Acc: 65.413755\n",
+      "==========================\n"
      ]
     }
    ],
