--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -452,7 +452,8 @@
       "==========================\n",
       "\tEpoch: 3\tTrain loss: 0.975\tTrain Acc: 65.63675\n",
       "\tEpoch: 3\tTest loss: 0.996\tTest Acc: 65.413755\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 4 i : 18 and loss: 0.693 acc: 0.7343755\r"
      ]
     }
    ],
