Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -488,7 +488,8 @@
       "\tEpoch: 9\tTrain loss: 0.558\tTrain Acc: 80.60875\n",
       "\tEpoch: 9\tTest loss: 0.694\tTest Acc: 76.225525\n",
       "==========================\n",
-      "Epoch: 10 i : 263 and loss: 0.574 acc: 0.7812555\r"
+      "\tEpoch: 10\tTrain loss: 0.502\tTrain Acc: 82.42225\n",
+      "Epoch: 10 i : 6 and loss: 0.693 acc: 0.7578125\r"
      ]
     }
    ],
