Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -489,7 +489,9 @@
       "\tEpoch: 9\tTest loss: 0.694\tTest Acc: 76.225525\n",
       "==========================\n",
       "\tEpoch: 10\tTrain loss: 0.502\tTrain Acc: 82.42225\n",
-      "Epoch: 10 i : 6 and loss: 0.693 acc: 0.7578125\r"
+      "\tEpoch: 10\tTest loss: 0.685\tTest Acc: 76.986255\n",
+      "==========================\n",
+      "Epoch: 11 i : 54 and loss: 0.453 acc: 0.8437555\r"
      ]
     }
    ],
