Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -517,7 +517,10 @@
       "\tEpoch: 26\tTrain loss: 0.344\tTrain Acc: 87.53855\n",
       "\tEpoch: 26\tTest loss: 1.255\tTest Acc: 69.395525\n",
       "==========================\n",
-      "Epoch: 27 i : 186 and loss: 0.403 acc: 0.8753125\r"
+      "\tEpoch: 27\tTrain loss: 0.337\tTrain Acc: 87.69875\n",
+      "\tEpoch: 27\tTest loss: 1.27\tTest Acc: 69.7518755\n",
+      "==========================\n",
+      "Epoch: 28 i : 279 and loss: 0.313 acc: 0.8756255\r"
      ]
     }
    ],
