--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -491,7 +491,10 @@
       "\tEpoch: 10\tTrain loss: 0.502\tTrain Acc: 82.42225\n",
       "\tEpoch: 10\tTest loss: 0.685\tTest Acc: 76.986255\n",
       "==========================\n",
-      "Epoch: 11 i : 357 and loss: 0.484 acc: 0.8203125\r"
+      "\tEpoch: 11\tTrain loss: 0.459\tTrain Acc: 83.97275\n",
+      "\tEpoch: 11\tTest loss: 0.658\tTest Acc: 77.875255\n",
+      "==========================\n",
+      "Epoch: 12 i : 10 and loss: 0.408 acc: 0.8359375\r"
      ]
     }
    ],
