Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -520,7 +520,10 @@
       "\tEpoch: 27\tTrain loss: 0.337\tTrain Acc: 87.69875\n",
       "\tEpoch: 27\tTest loss: 1.27\tTest Acc: 69.7518755\n",
       "==========================\n",
-      "Epoch: 28 i : 279 and loss: 0.313 acc: 0.8756255\r"
+      "\tEpoch: 28\tTrain loss: 0.319\tTrain Acc: 88.22755\n",
+      "\tEpoch: 28\tTest loss: 1.452\tTest Acc: 67.972525\n",
+      "==========================\n",
+      "Epoch: 29 i : 349 and loss: 0.307 acc: 0.8828125\r"
      ]
     }
    ],
