--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -494,7 +494,8 @@
       "\tEpoch: 11\tTrain loss: 0.459\tTrain Acc: 83.97275\n",
       "\tEpoch: 11\tTest loss: 0.658\tTest Acc: 77.875255\n",
       "==========================\n",
-      "Epoch: 12 i : 312 and loss: 0.33 acc: 0.92187525\r"
+      "\tEpoch: 12\tTrain loss: 0.426\tTrain Acc: 85.09855\n",
+      "Epoch: 12 i : 41 and loss: 0.62 acc: 0.78125555\r"
      ]
     }
    ],
