Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -523,7 +523,11 @@
       "\tEpoch: 28\tTrain loss: 0.319\tTrain Acc: 88.22755\n",
       "\tEpoch: 28\tTest loss: 1.452\tTest Acc: 67.972525\n",
       "==========================\n",
-      "Epoch: 29 i : 349 and loss: 0.307 acc: 0.8828125\r"
+      "\tEpoch: 29\tTrain loss: 0.311\tTrain Acc: 88.38625\n",
+      "\tEpoch: 29\tTest loss: 1.499\tTest Acc: 70.335375\n",
+      "==========================\n",
+      "\tEpoch: 30\tTrain loss: 0.298\tTrain Acc: 88.68875\n",
+      "Epoch: 30 i : 49 and loss: 1.845 acc: 0.6328125\r"
      ]
     }
    ],
