Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -453,7 +453,8 @@
       "\tEpoch: 3\tTrain loss: 0.975\tTrain Acc: 65.63675\n",
       "\tEpoch: 3\tTest loss: 0.996\tTest Acc: 65.413755\n",
       "==========================\n",
-      "Epoch: 4 i : 382 and loss: 0.761 acc: 0.7265625\r"
+      "\tEpoch: 4\tTrain loss: 0.851\tTrain Acc: 70.16875\n",
+      "Epoch: 4 i : 35 and loss: 0.983 acc: 0.6718755\r"
      ]
     }
    ],
