Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -495,7 +495,9 @@
       "\tEpoch: 11\tTest loss: 0.658\tTest Acc: 77.875255\n",
       "==========================\n",
       "\tEpoch: 12\tTrain loss: 0.426\tTrain Acc: 85.09855\n",
-      "Epoch: 12 i : 41 and loss: 0.62 acc: 0.78125555\r"
+      "\tEpoch: 12\tTest loss: 0.699\tTest Acc: 76.885625\n",
+      "==========================\n",
+      "Epoch: 13 i : 61 and loss: 0.316 acc: 0.8906255\r"
      ]
     }
    ],
