--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -454,7 +454,8 @@
       "\tEpoch: 3\tTest loss: 0.996\tTest Acc: 65.413755\n",
       "==========================\n",
       "\tEpoch: 4\tTrain loss: 0.851\tTrain Acc: 70.16875\n",
-      "Epoch: 4 i : 35 and loss: 0.983 acc: 0.6718755\r"
+      "\tEpoch: 4\tTest loss: 0.939\tTest Acc: 67.878125\n",
+      "==========================\n"
      ]
     }
    ],
