--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -455,7 +455,8 @@
       "==========================\n",
       "\tEpoch: 4\tTrain loss: 0.851\tTrain Acc: 70.16875\n",
       "\tEpoch: 4\tTest loss: 0.939\tTest Acc: 67.878125\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 5 i : 22 and loss: 0.758 acc: 0.7343755\r"
      ]
     }
    ],
