Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -527,7 +527,12 @@
       "\tEpoch: 29\tTest loss: 1.499\tTest Acc: 70.335375\n",
       "==========================\n",
       "\tEpoch: 30\tTrain loss: 0.298\tTrain Acc: 88.68875\n",
-      "Epoch: 30 i : 49 and loss: 1.845 acc: 0.6328125\r"
+      "\tEpoch: 30\tTest loss: 1.526\tTest Acc: 70.946875\n",
+      "==========================\n",
+      "\tEpoch: 31\tTrain loss: 0.296\tTrain Acc: 88.72655\n",
+      "\tEpoch: 31\tTest loss: 1.445\tTest Acc: 70.079375\n",
+      "==========================\n",
+      "Epoch: 32 i : 68 and loss: 0.3 acc: 0.875906255\r"
      ]
     }
    ],
