--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -497,7 +497,7 @@
       "\tEpoch: 12\tTrain loss: 0.426\tTrain Acc: 85.09855\n",
       "\tEpoch: 12\tTest loss: 0.699\tTest Acc: 76.885625\n",
       "==========================\n",
-      "Epoch: 13 i : 292 and loss: 0.374 acc: 0.8593755\r"
+      "\tEpoch: 13\tTrain loss: 0.387\tTrain Acc: 86.36255\n"
      ]
     }
    ],
