Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -532,7 +532,10 @@
       "\tEpoch: 31\tTrain loss: 0.296\tTrain Acc: 88.72655\n",
       "\tEpoch: 31\tTest loss: 1.445\tTest Acc: 70.079375\n",
       "==========================\n",
-      "Epoch: 32 i : 68 and loss: 0.3 acc: 0.875906255\r"
+      "\tEpoch: 32\tTrain loss: 0.318\tTrain Acc: 88.13475\n",
+      "\tEpoch: 32\tTest loss: 1.415\tTest Acc: 71.481255\n",
+      "==========================\n",
+      "Epoch: 33 i : 134 and loss: 0.299 acc: 0.8906255\r"
      ]
     }
    ],
