Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -500,7 +500,10 @@
       "\tEpoch: 13\tTrain loss: 0.387\tTrain Acc: 86.36255\n",
       "\tEpoch: 13\tTest loss: 0.703\tTest Acc: 77.518125\n",
       "==========================\n",
-      "Epoch: 14 i : 351 and loss: 0.424 acc: 0.8515625\r"
+      "\tEpoch: 14\tTrain loss: 0.342\tTrain Acc: 88.03425\n",
+      "\tEpoch: 14\tTest loss: 0.718\tTest Acc: 77.062525\n",
+      "==========================\n",
+      "Epoch: 15 i : 4 and loss: 0.239 acc: 0.9375755\r"
      ]
     }
    ],
