--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -456,7 +456,8 @@
       "\tEpoch: 4\tTrain loss: 0.851\tTrain Acc: 70.16875\n",
       "\tEpoch: 4\tTest loss: 0.939\tTest Acc: 67.878125\n",
       "==========================\n",
-      "Epoch: 5 i : 390 and loss: 0.7 acc: 0.734375875\r"
+      "\tEpoch: 5\tTrain loss: 0.748\tTrain Acc: 73.95675\n",
+      "Epoch: 5 i : 43 and loss: 0.87 acc: 0.70312555\r"
      ]
     }
    ],
