Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -457,7 +457,8 @@
       "\tEpoch: 4\tTest loss: 0.939\tTest Acc: 67.878125\n",
       "==========================\n",
       "\tEpoch: 5\tTrain loss: 0.748\tTrain Acc: 73.95675\n",
-      "Epoch: 5 i : 43 and loss: 0.87 acc: 0.70312555\r"
+      "\tEpoch: 5\tTest loss: 0.819\tTest Acc: 72.695255\n",
+      "==========================\n"
      ]
     }
    ],
