--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -535,7 +535,10 @@
       "\tEpoch: 32\tTrain loss: 0.318\tTrain Acc: 88.13475\n",
       "\tEpoch: 32\tTest loss: 1.415\tTest Acc: 71.481255\n",
       "==========================\n",
-      "Epoch: 33 i : 134 and loss: 0.299 acc: 0.8906255\r"
+      "\tEpoch: 33\tTrain loss: 0.301\tTrain Acc: 88.62475\n",
+      "\tEpoch: 33\tTest loss: 1.566\tTest Acc: 70.523125\n",
+      "==========================\n",
+      "Epoch: 34 i : 219 and loss: 0.163 acc: 0.9375125\r"
      ]
     }
    ],
