Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -503,7 +503,9 @@
       "\tEpoch: 14\tTrain loss: 0.342\tTrain Acc: 88.03425\n",
       "\tEpoch: 14\tTest loss: 0.718\tTest Acc: 77.062525\n",
       "==========================\n",
-      "Epoch: 15 i : 315 and loss: 0.263 acc: 0.9140625\r"
+      "\tEpoch: 15\tTrain loss: 0.314\tTrain Acc: 89.00825\n",
+      "\tEpoch: 15\tTest loss: 0.816\tTest Acc: 75.346875\n",
+      "==========================\n"
      ]
     }
    ],
