--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -458,7 +458,8 @@
       "==========================\n",
       "\tEpoch: 5\tTrain loss: 0.748\tTrain Acc: 73.95675\n",
       "\tEpoch: 5\tTest loss: 0.819\tTest Acc: 72.695255\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 6 i : 27 and loss: 0.961 acc: 0.7031255\r"
      ]
     }
    ],
