Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -505,7 +505,8 @@
       "==========================\n",
       "\tEpoch: 15\tTrain loss: 0.314\tTrain Acc: 89.00825\n",
       "\tEpoch: 15\tTest loss: 0.816\tTest Acc: 75.346875\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 16 i : 97 and loss: 0.388 acc: 0.8758755\r"
      ]
     }
    ],
