Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -538,7 +538,10 @@
       "\tEpoch: 33\tTrain loss: 0.301\tTrain Acc: 88.62475\n",
       "\tEpoch: 33\tTest loss: 1.566\tTest Acc: 70.523125\n",
       "==========================\n",
-      "Epoch: 34 i : 219 and loss: 0.163 acc: 0.9375125\r"
+      "\tEpoch: 34\tTrain loss: 0.31\tTrain Acc: 88.322875\n",
+      "\tEpoch: 34\tTest loss: 1.553\tTest Acc: 71.395555\n",
+      "==========================\n",
+      "Epoch: 35 i : 339 and loss: 0.281 acc: 0.8828125\r"
      ]
     }
    ],
