Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -506,7 +506,10 @@
       "\tEpoch: 15\tTrain loss: 0.314\tTrain Acc: 89.00825\n",
       "\tEpoch: 15\tTest loss: 0.816\tTest Acc: 75.346875\n",
       "==========================\n",
-      "\tEpoch: 16\tTrain loss: 0.283\tTrain Acc: 90.01225\n"
+      "\tEpoch: 16\tTrain loss: 0.283\tTrain Acc: 90.01225\n",
+      "\tEpoch: 16\tTest loss: 0.757\tTest Acc: 77.515755\n",
+      "==========================\n",
+      "Epoch: 17 i : 48 and loss: 0.363 acc: 0.8593755\r"
      ]
     }
    ],
