Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -541,7 +541,11 @@
       "\tEpoch: 34\tTrain loss: 0.31\tTrain Acc: 88.322875\n",
       "\tEpoch: 34\tTest loss: 1.553\tTest Acc: 71.395555\n",
       "==========================\n",
-      "Epoch: 35 i : 339 and loss: 0.281 acc: 0.8828125\r"
+      "\tEpoch: 35\tTrain loss: 0.299\tTrain Acc: 88.59425\n",
+      "\tEpoch: 35\tTest loss: 1.406\tTest Acc: 70.485755\n",
+      "==========================\n",
+      "\tEpoch: 36\tTrain loss: 0.288\tTrain Acc: 88.88275\n",
+      "Epoch: 36 i : 19 and loss: 2.054 acc: 0.6718755\r"
      ]
     }
    ],
