--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -509,7 +509,10 @@
       "\tEpoch: 16\tTrain loss: 0.283\tTrain Acc: 90.01225\n",
       "\tEpoch: 16\tTest loss: 0.757\tTest Acc: 77.515755\n",
       "==========================\n",
-      "Epoch: 17 i : 352 and loss: 0.216 acc: 0.9453125\r"
+      "\tEpoch: 17\tTrain loss: 0.251\tTrain Acc: 91.18255\n",
+      "\tEpoch: 17\tTest loss: 0.809\tTest Acc: 78.128125\n",
+      "==========================\n",
+      "Epoch: 18 i : 2 and loss: 0.364 acc: 0.8750625\r"
      ]
     }
    ],
