--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -459,7 +459,8 @@
       "\tEpoch: 5\tTrain loss: 0.748\tTrain Acc: 73.95675\n",
       "\tEpoch: 5\tTest loss: 0.819\tTest Acc: 72.695255\n",
       "==========================\n",
-      "Epoch: 6 i : 370 and loss: 0.498 acc: 0.8437525\r"
+      "\tEpoch: 6\tTrain loss: 0.661\tTrain Acc: 77.03855\n",
+      "Epoch: 6 i : 3 and loss: 0.669 acc: 0.7421875\r"
      ]
     }
    ],
