--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -460,7 +460,9 @@
       "\tEpoch: 5\tTest loss: 0.819\tTest Acc: 72.695255\n",
       "==========================\n",
       "\tEpoch: 6\tTrain loss: 0.661\tTrain Acc: 77.03855\n",
-      "Epoch: 6 i : 58 and loss: 0.564 acc: 0.8046875\r"
+      "\tEpoch: 6\tTest loss: 0.743\tTest Acc: 75.365625\n",
+      "==========================\n",
+      "Epoch: 7 i : 7 and loss: 0.712 acc: 0.7265625\r"
      ]
     }
    ],
