Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -545,7 +545,12 @@
       "\tEpoch: 35\tTest loss: 1.406\tTest Acc: 70.485755\n",
       "==========================\n",
       "\tEpoch: 36\tTrain loss: 0.288\tTrain Acc: 88.88275\n",
-      "Epoch: 36 i : 19 and loss: 2.054 acc: 0.6718755\r"
+      "\tEpoch: 36\tTest loss: 1.552\tTest Acc: 70.095755\n",
+      "==========================\n",
+      "\tEpoch: 37\tTrain loss: 0.298\tTrain Acc: 88.59875\n",
+      "\tEpoch: 37\tTest loss: 1.475\tTest Acc: 71.255255\n",
+      "==========================\n",
+      "Epoch: 38 i : 51 and loss: 0.368 acc: 0.8671875\r"
      ]
     }
    ],
