--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -512,7 +512,10 @@
       "\tEpoch: 17\tTrain loss: 0.251\tTrain Acc: 91.18255\n",
       "\tEpoch: 17\tTest loss: 0.809\tTest Acc: 78.128125\n",
       "==========================\n",
-      "Epoch: 18 i : 371 and loss: 0.198 acc: 0.9140625\r"
+      "\tEpoch: 18\tTrain loss: 0.241\tTrain Acc: 91.53255\n",
+      "\tEpoch: 18\tTest loss: 0.789\tTest Acc: 78.975125\n",
+      "==========================\n",
+      "Epoch: 19 i : 25 and loss: 0.285 acc: 0.8671875\r"
      ]
     }
    ],
