Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -550,7 +550,10 @@
       "\tEpoch: 37\tTrain loss: 0.298\tTrain Acc: 88.59875\n",
       "\tEpoch: 37\tTest loss: 1.475\tTest Acc: 71.255255\n",
       "==========================\n",
-      "Epoch: 38 i : 51 and loss: 0.368 acc: 0.8671875\r"
+      "\tEpoch: 38\tTrain loss: 0.289\tTrain Acc: 88.79255\n",
+      "\tEpoch: 38\tTest loss: 1.463\tTest Acc: 70.355255\n",
+      "==========================\n",
+      "Epoch: 39 i : 123 and loss: 0.304 acc: 0.8753755\r"
      ]
     }
    ],
