Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -515,7 +515,9 @@
       "\tEpoch: 18\tTrain loss: 0.241\tTrain Acc: 91.53255\n",
       "\tEpoch: 18\tTest loss: 0.789\tTest Acc: 78.975125\n",
       "==========================\n",
-      "Epoch: 19 i : 329 and loss: 0.196 acc: 0.9609375\r"
+      "\tEpoch: 19\tTrain loss: 0.212\tTrain Acc: 92.46555\n",
+      "\tEpoch: 19\tTest loss: 0.886\tTest Acc: 77.675525\n",
+      "==========================\n"
      ]
     }
    ],
