--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -517,7 +517,8 @@
       "==========================\n",
       "\tEpoch: 19\tTrain loss: 0.212\tTrain Acc: 92.46555\n",
       "\tEpoch: 19\tTest loss: 0.886\tTest Acc: 77.675525\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 20 i : 87 and loss: 0.358 acc: 0.8515625\r"
      ]
     }
    ],
