Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -553,7 +553,10 @@
       "\tEpoch: 38\tTrain loss: 0.289\tTrain Acc: 88.79255\n",
       "\tEpoch: 38\tTest loss: 1.463\tTest Acc: 70.355255\n",
       "==========================\n",
-      "Epoch: 39 i : 123 and loss: 0.304 acc: 0.8753755\r"
+      "\tEpoch: 39\tTrain loss: 0.299\tTrain Acc: 88.54655\n",
+      "\tEpoch: 39\tTest loss: 1.348\tTest Acc: 71.225255\n",
+      "==========================\n",
+      "Epoch: 40 i : 195 and loss: 0.279 acc: 0.8984375\r"
      ]
     }
    ],
