Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -518,7 +518,8 @@
       "\tEpoch: 19\tTrain loss: 0.212\tTrain Acc: 92.46555\n",
       "\tEpoch: 19\tTest loss: 0.886\tTest Acc: 77.675525\n",
       "==========================\n",
-      "Epoch: 20 i : 283 and loss: 0.125 acc: 0.9687555\r"
+      "\tEpoch: 20\tTrain loss: 0.167\tTrain Acc: 93.93455\n",
+      "Epoch: 20 i : 13 and loss: 0.993 acc: 0.781255\r"
      ]
     }
    ],
