--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -462,7 +462,8 @@
       "\tEpoch: 6\tTrain loss: 0.661\tTrain Acc: 77.03855\n",
       "\tEpoch: 6\tTest loss: 0.743\tTest Acc: 75.365625\n",
       "==========================\n",
-      "Epoch: 7 i : 371 and loss: 0.536 acc: 0.8125625\r"
+      "\tEpoch: 7\tTrain loss: 0.592\tTrain Acc: 79.48855\n",
+      "Epoch: 7 i : 2 and loss: 0.674 acc: 0.7968755\r"
      ]
     }
    ],
