--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -519,7 +519,9 @@
       "\tEpoch: 19\tTest loss: 0.886\tTest Acc: 77.675525\n",
       "==========================\n",
       "\tEpoch: 20\tTrain loss: 0.167\tTrain Acc: 93.93455\n",
-      "Epoch: 20 i : 13 and loss: 0.993 acc: 0.781255\r"
+      "\tEpoch: 20\tTest loss: 1.03\tTest Acc: 77.2487555\n",
+      "==========================\n",
+      "Epoch: 21 i : 88 and loss: 0.136 acc: 0.9687525\r"
      ]
     }
    ],
