Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -463,7 +463,9 @@
       "\tEpoch: 6\tTest loss: 0.743\tTest Acc: 75.365625\n",
       "==========================\n",
       "\tEpoch: 7\tTrain loss: 0.592\tTrain Acc: 79.48855\n",
-      "Epoch: 7 i : 73 and loss: 0.66 acc: 0.75781255\r"
+      "\tEpoch: 7\tTest loss: 0.762\tTest Acc: 75.065875\n",
+      "==========================\n",
+      "Epoch: 8 i : 13 and loss: 0.682 acc: 0.7656255\r"
      ]
     }
    ],
