Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -556,7 +556,10 @@
       "\tEpoch: 39\tTrain loss: 0.299\tTrain Acc: 88.54655\n",
       "\tEpoch: 39\tTest loss: 1.348\tTest Acc: 71.225255\n",
       "==========================\n",
-      "Epoch: 40 i : 195 and loss: 0.279 acc: 0.8984375\r"
+      "\tEpoch: 40\tTrain loss: 0.294\tTrain Acc: 88.72475\n",
+      "\tEpoch: 40\tTest loss: 1.332\tTest Acc: 71.066875\n",
+      "==========================\n",
+      "Epoch: 41 i : 305 and loss: 0.231 acc: 0.9140625\r"
      ]
     }
    ],
