Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -521,7 +521,7 @@
       "\tEpoch: 20\tTrain loss: 0.167\tTrain Acc: 93.93455\n",
       "\tEpoch: 20\tTest loss: 1.03\tTest Acc: 77.2487555\n",
       "==========================\n",
-      "Epoch: 21 i : 284 and loss: 0.195 acc: 0.9531255\r"
+      "\tEpoch: 21\tTrain loss: 0.156\tTrain Acc: 94.36825\n"
      ]
     }
    ],
