--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -521,7 +521,10 @@
       "\tEpoch: 20\tTrain loss: 0.167\tTrain Acc: 93.93455\n",
       "\tEpoch: 20\tTest loss: 1.03\tTest Acc: 77.2487555\n",
       "==========================\n",
-      "\tEpoch: 21\tTrain loss: 0.156\tTrain Acc: 94.36825\n"
+      "\tEpoch: 21\tTrain loss: 0.156\tTrain Acc: 94.36825\n",
+      "\tEpoch: 21\tTest loss: 0.928\tTest Acc: 78.985375\n",
+      "==========================\n",
+      "Epoch: 22 i : 45 and loss: 0.161 acc: 0.9453125\r"
      ]
     }
    ],
