Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -559,7 +559,10 @@
       "\tEpoch: 40\tTrain loss: 0.294\tTrain Acc: 88.72475\n",
       "\tEpoch: 40\tTest loss: 1.332\tTest Acc: 71.066875\n",
       "==========================\n",
-      "Epoch: 41 i : 305 and loss: 0.231 acc: 0.9140625\r"
+      "\tEpoch: 41\tTrain loss: 0.295\tTrain Acc: 88.68475\n",
+      "\tEpoch: 41\tTest loss: 1.369\tTest Acc: 70.785125\n",
+      "==========================\n",
+      "Epoch: 42 i : 379 and loss: 0.306 acc: 0.8758755\r"
      ]
     }
    ],
