Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -562,7 +562,12 @@
       "\tEpoch: 41\tTrain loss: 0.295\tTrain Acc: 88.68475\n",
       "\tEpoch: 41\tTest loss: 1.369\tTest Acc: 70.785125\n",
       "==========================\n",
-      "Epoch: 42 i : 379 and loss: 0.306 acc: 0.8758755\r"
+      "\tEpoch: 42\tTrain loss: 0.284\tTrain Acc: 88.95875\n",
+      "\tEpoch: 42\tTest loss: 1.45\tTest Acc: 71.3525255\n",
+      "==========================\n",
+      "\tEpoch: 43\tTrain loss: 0.283\tTrain Acc: 88.90825\n",
+      "\tEpoch: 43\tTest loss: 1.436\tTest Acc: 70.825755\n",
+      "==========================\n"
      ]
     }
    ],
