Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -466,7 +466,9 @@
       "\tEpoch: 7\tTest loss: 0.762\tTest Acc: 75.065875\n",
       "==========================\n",
       "\tEpoch: 8\tTrain loss: 0.546\tTrain Acc: 81.12125\n",
-      "Epoch: 8 i : 75 and loss: 0.65 acc: 0.75781255\r"
+      "\tEpoch: 8\tTest loss: 0.759\tTest Acc: 75.597525\n",
+      "==========================\n",
+      "Epoch: 9 i : 14 and loss: 0.654 acc: 0.7890625\r"
      ]
     }
    ],
