Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -527,7 +527,9 @@
       "\tEpoch: 22\tTrain loss: 0.143\tTrain Acc: 94.87825\n",
       "\tEpoch: 22\tTest loss: 1.048\tTest Acc: 77.533125\n",
       "==========================\n",
-      "Epoch: 23 i : 316 and loss: 0.129 acc: 0.9609375\r"
+      "\tEpoch: 23\tTrain loss: 0.13\tTrain Acc: 95.475375\n",
+      "\tEpoch: 23\tTest loss: 1.097\tTest Acc: 76.721255\n",
+      "==========================\n"
      ]
     }
    ],
