Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -567,7 +567,9 @@
       "==========================\n",
       "\tEpoch: 43\tTrain loss: 0.283\tTrain Acc: 88.90825\n",
       "\tEpoch: 43\tTest loss: 1.436\tTest Acc: 70.825755\n",
-      "==========================\n"
+      "==========================\n",
+      "\tEpoch: 44\tTrain loss: 0.293\tTrain Acc: 88.71255\n",
+      "Epoch: 44 i : 57 and loss: 1.465 acc: 0.7656255\r"
      ]
     }
    ],
