--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -451,7 +451,7 @@
      6,
      34
     ],
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -529,7 +529,8 @@
       "==========================\n",
       "\tEpoch: 23\tTrain loss: 0.13\tTrain Acc: 95.475375\n",
       "\tEpoch: 23\tTest loss: 1.097\tTest Acc: 76.721255\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 24 i : 47 and loss: 0.069 acc: 0.9843755\r"
      ]
     }
    ],
