Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -569,7 +569,9 @@
       "\tEpoch: 43\tTest loss: 1.436\tTest Acc: 70.825755\n",
       "==========================\n",
       "\tEpoch: 44\tTrain loss: 0.293\tTrain Acc: 88.71255\n",
-      "Epoch: 44 i : 57 and loss: 1.465 acc: 0.7656255\r"
+      "\tEpoch: 44\tTest loss: 1.46\tTest Acc: 71.8225125\n",
+      "==========================\n",
+      "Epoch: 45 i : 111 and loss: 0.435 acc: 0.8359375\r"
      ]
     }
    ],
