Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -530,7 +530,8 @@
       "\tEpoch: 23\tTrain loss: 0.13\tTrain Acc: 95.475375\n",
       "\tEpoch: 23\tTest loss: 1.097\tTest Acc: 76.721255\n",
       "==========================\n",
-      "Epoch: 24 i : 301 and loss: 0.116 acc: 0.9453125\r"
+      "\tEpoch: 24\tTrain loss: 0.107\tTrain Acc: 96.19575\n",
+      "Epoch: 24 i : 10 and loss: 1.059 acc: 0.7578125\r"
      ]
     }
    ],
