Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -531,7 +531,9 @@
       "\tEpoch: 23\tTest loss: 1.097\tTest Acc: 76.721255\n",
       "==========================\n",
       "\tEpoch: 24\tTrain loss: 0.107\tTrain Acc: 96.19575\n",
-      "Epoch: 24 i : 10 and loss: 1.059 acc: 0.7578125\r"
+      "\tEpoch: 24\tTest loss: 1.066\tTest Acc: 78.137575\n",
+      "==========================\n",
+      "Epoch: 25 i : 59 and loss: 0.076 acc: 0.9609375\r"
      ]
     }
    ],
