--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -571,7 +571,10 @@
       "\tEpoch: 44\tTrain loss: 0.293\tTrain Acc: 88.71255\n",
       "\tEpoch: 44\tTest loss: 1.46\tTest Acc: 71.8225125\n",
       "==========================\n",
-      "Epoch: 45 i : 111 and loss: 0.435 acc: 0.8359375\r"
+      "\tEpoch: 45\tTrain loss: 0.277\tTrain Acc: 89.07875\n",
+      "\tEpoch: 45\tTest loss: 1.449\tTest Acc: 70.915525\n",
+      "==========================\n",
+      "Epoch: 46 i : 180 and loss: 0.247 acc: 0.9062575\r"
      ]
     }
    ],
