Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -533,7 +533,9 @@
       "\tEpoch: 24\tTrain loss: 0.107\tTrain Acc: 96.19575\n",
       "\tEpoch: 24\tTest loss: 1.066\tTest Acc: 78.137575\n",
       "==========================\n",
-      "Epoch: 25 i : 361 and loss: 0.098 acc: 0.9453125\r"
+      "\tEpoch: 25\tTrain loss: 0.105\tTrain Acc: 96.32825\n",
+      "\tEpoch: 25\tTest loss: 0.996\tTest Acc: 77.995625\n",
+      "==========================\n"
      ]
     }
    ],
