Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -574,7 +574,10 @@
       "\tEpoch: 45\tTrain loss: 0.277\tTrain Acc: 89.07875\n",
       "\tEpoch: 45\tTest loss: 1.449\tTest Acc: 70.915525\n",
       "==========================\n",
-      "Epoch: 46 i : 180 and loss: 0.247 acc: 0.9062575\r"
+      "\tEpoch: 46\tTrain loss: 0.287\tTrain Acc: 88.82855\n",
+      "\tEpoch: 46\tTest loss: 1.431\tTest Acc: 71.175755\n",
+      "==========================\n",
+      "Epoch: 47 i : 273 and loss: 0.287 acc: 0.8755575\r"
      ]
     }
    ],
