Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -535,7 +535,8 @@
       "==========================\n",
       "\tEpoch: 25\tTrain loss: 0.105\tTrain Acc: 96.32825\n",
       "\tEpoch: 25\tTest loss: 0.996\tTest Acc: 77.995625\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 26 i : 111 and loss: 0.084 acc: 0.9687555\r"
      ]
     }
    ],
