--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -468,7 +468,8 @@
       "\tEpoch: 8\tTrain loss: 0.546\tTrain Acc: 81.12125\n",
       "\tEpoch: 8\tTest loss: 0.759\tTest Acc: 75.597525\n",
       "==========================\n",
-      "Epoch: 9 i : 362 and loss: 0.557 acc: 0.7890625\r"
+      "\tEpoch: 9\tTrain loss: 0.481\tTrain Acc: 83.35625\n",
+      "Epoch: 9 i : 38 and loss: 0.672 acc: 0.7812575\r"
      ]
     }
    ],
