--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -469,7 +469,9 @@
       "\tEpoch: 8\tTest loss: 0.759\tTest Acc: 75.597525\n",
       "==========================\n",
       "\tEpoch: 9\tTrain loss: 0.481\tTrain Acc: 83.35625\n",
-      "Epoch: 9 i : 38 and loss: 0.672 acc: 0.7812575\r"
+      "\tEpoch: 9\tTest loss: 0.721\tTest Acc: 76.543755\n",
+      "==========================\n",
+      "Epoch: 10 i : 23 and loss: 0.288 acc: 0.9140625\r"
      ]
     }
    ],
