Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -577,7 +577,10 @@
       "\tEpoch: 46\tTrain loss: 0.287\tTrain Acc: 88.82855\n",
       "\tEpoch: 46\tTest loss: 1.431\tTest Acc: 71.175755\n",
       "==========================\n",
-      "Epoch: 47 i : 273 and loss: 0.287 acc: 0.8755575\r"
+      "\tEpoch: 47\tTrain loss: 0.273\tTrain Acc: 89.17425\n",
+      "\tEpoch: 47\tTest loss: 1.54\tTest Acc: 71.3125625\n",
+      "==========================\n",
+      "Epoch: 48 i : 270 and loss: 0.313 acc: 0.8758125\r"
      ]
     }
    ],
