--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -536,7 +536,10 @@
       "\tEpoch: 25\tTrain loss: 0.105\tTrain Acc: 96.32825\n",
       "\tEpoch: 25\tTest loss: 0.996\tTest Acc: 77.995625\n",
       "==========================\n",
-      "Epoch: 26 i : 371 and loss: 0.097 acc: 0.9609375\r"
+      "\tEpoch: 26\tTrain loss: 0.097\tTrain Acc: 96.53425\n",
+      "\tEpoch: 26\tTest loss: 1.006\tTest Acc: 78.915575\n",
+      "==========================\n",
+      "Epoch: 27 i : 19 and loss: 0.158 acc: 0.9375255\r"
      ]
     }
    ],
