--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -539,7 +539,7 @@
       "\tEpoch: 26\tTrain loss: 0.097\tTrain Acc: 96.53425\n",
       "\tEpoch: 26\tTest loss: 1.006\tTest Acc: 78.915575\n",
       "==========================\n",
-      "Epoch: 27 i : 311 and loss: 0.025 acc: 1.0843755\r"
+      "\tEpoch: 27\tTrain loss: 0.091\tTrain Acc: 96.78675\n"
      ]
     }
    ],
