Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -539,7 +539,10 @@
       "\tEpoch: 26\tTrain loss: 0.097\tTrain Acc: 96.53425\n",
       "\tEpoch: 26\tTest loss: 1.006\tTest Acc: 78.915575\n",
       "==========================\n",
-      "\tEpoch: 27\tTrain loss: 0.091\tTrain Acc: 96.78675\n"
+      "\tEpoch: 27\tTrain loss: 0.091\tTrain Acc: 96.78675\n",
+      "\tEpoch: 27\tTest loss: 1.156\tTest Acc: 77.395875\n",
+      "==========================\n",
+      "Epoch: 28 i : 47 and loss: 0.059 acc: 0.9765625\r"
      ]
     }
    ],
