--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -583,7 +583,11 @@
       "\tEpoch: 48\tTrain loss: 0.282\tTrain Acc: 88.93625\n",
       "\tEpoch: 48\tTest loss: 1.455\tTest Acc: 71.555625\n",
       "==========================\n",
-      "Epoch: 49 i : 356 and loss: 0.215 acc: 0.9140625\r"
+      "\tEpoch: 49\tTrain loss: 0.277\tTrain Acc: 89.06625\n",
+      "\tEpoch: 49\tTest loss: 1.657\tTest Acc: 71.120625\n",
+      "==========================\n",
+      "\tEpoch: 50\tTrain loss: 0.286\tTrain Acc: 88.79255\n",
+      "Epoch: 50 i : 63 and loss: 1.23 acc: 0.70312575\r"
      ]
     }
    ],
