Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -471,7 +471,9 @@
       "\tEpoch: 9\tTrain loss: 0.481\tTrain Acc: 83.35625\n",
       "\tEpoch: 9\tTest loss: 0.721\tTest Acc: 76.543755\n",
       "==========================\n",
-      "Epoch: 10 i : 388 and loss: 0.427 acc: 0.8671875\r"
+      "\tEpoch: 10\tTrain loss: 0.43\tTrain Acc: 85.198875\n",
+      "\tEpoch: 10\tTest loss: 0.739\tTest Acc: 76.775625\n",
+      "==========================\n"
      ]
     }
    ],
