Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -542,7 +542,10 @@
       "\tEpoch: 27\tTrain loss: 0.091\tTrain Acc: 96.78675\n",
       "\tEpoch: 27\tTest loss: 1.156\tTest Acc: 77.395875\n",
       "==========================\n",
-      "Epoch: 28 i : 350 and loss: 0.038 acc: 0.9843755\r"
+      "\tEpoch: 28\tTrain loss: 0.076\tTrain Acc: 97.31225\n",
+      "\tEpoch: 28\tTest loss: 0.982\tTest Acc: 79.379375\n",
+      "==========================\n",
+      "Epoch: 29 i : 16 and loss: 0.056 acc: 0.9843755\r"
      ]
     }
    ],
