--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -473,7 +473,8 @@
       "==========================\n",
       "\tEpoch: 10\tTrain loss: 0.43\tTrain Acc: 85.198875\n",
       "\tEpoch: 10\tTest loss: 0.739\tTest Acc: 76.775625\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 11 i : 50 and loss: 0.525 acc: 0.8046875\r"
      ]
     }
    ],
