Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -587,7 +587,12 @@
       "\tEpoch: 49\tTest loss: 1.657\tTest Acc: 71.120625\n",
       "==========================\n",
       "\tEpoch: 50\tTrain loss: 0.286\tTrain Acc: 88.79255\n",
-      "Epoch: 50 i : 63 and loss: 1.23 acc: 0.70312575\r"
+      "\tEpoch: 50\tTest loss: 1.486\tTest Acc: 70.256875\n",
+      "==========================\n",
+      "\tEpoch: 51\tTrain loss: 0.279\tTrain Acc: 89.03875\n",
+      "\tEpoch: 51\tTest loss: 1.606\tTest Acc: 70.835875\n",
+      "==========================\n",
+      "Epoch: 52 i : 31 and loss: 0.194 acc: 0.9218755\r"
      ]
     }
    ],
