Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -545,7 +545,8 @@
       "\tEpoch: 28\tTrain loss: 0.076\tTrain Acc: 97.31225\n",
       "\tEpoch: 28\tTest loss: 0.982\tTest Acc: 79.379375\n",
       "==========================\n",
-      "Epoch: 29 i : 317 and loss: 0.269 acc: 0.9062575\r"
+      "\tEpoch: 29\tTrain loss: 0.062\tTrain Acc: 97.83875\n",
+      "Epoch: 29 i : 63 and loss: 1.075 acc: 0.7812575\r"
      ]
     }
    ],
