--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -474,7 +474,7 @@
       "\tEpoch: 10\tTrain loss: 0.43\tTrain Acc: 85.198875\n",
       "\tEpoch: 10\tTest loss: 0.739\tTest Acc: 76.775625\n",
       "==========================\n",
-      "Epoch: 11 i : 100 and loss: 0.401 acc: 0.859375\r"
+      "Epoch: 11 i : 155 and loss: 0.622 acc: 0.7812575\r"
      ]
     }
    ],
