Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -592,7 +592,10 @@
       "\tEpoch: 51\tTrain loss: 0.279\tTrain Acc: 89.03875\n",
       "\tEpoch: 51\tTest loss: 1.606\tTest Acc: 70.835875\n",
       "==========================\n",
-      "Epoch: 52 i : 31 and loss: 0.194 acc: 0.9218755\r"
+      "\tEpoch: 52\tTrain loss: 0.276\tTrain Acc: 89.09275\n",
+      "\tEpoch: 52\tTest loss: 1.639\tTest Acc: 70.618755\n",
+      "==========================\n",
+      "Epoch: 53 i : 83 and loss: 0.287 acc: 0.8906255\r"
      ]
     }
    ],
